// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filename renders as expected renders upload status icon as expected 1`] = `
<Filename
  iconDescription="Upload complete"
  status="uploading"
  tabIndex="0"
>
  <Loading
    active={true}
    description="Upload complete"
    small={true}
    withOverlay={false}
  >
    <div
      aria-atomic="true"
      aria-labelledby="loading-id-1"
      aria-live="assertive"
      className="bx--loading bx--loading--small"
    >
      <label
        className="bx--visually-hidden"
        id="loading-id-1"
      >
        Upload complete
      </label>
      <svg
        className="bx--loading__svg"
        viewBox="-75 -75 150 150"
      >
        <title>
          Upload complete
        </title>
        <circle
          className="bx--loading__background"
          cx="0"
          cy="0"
          r="26.8125"
        />
        <circle
          className="bx--loading__stroke"
          cx="0"
          cy="0"
          r="26.8125"
        />
      </svg>
    </div>
  </Loading>
</Filename>
`;

exports[`Filename renders as expected renders upload status icon as expected 2`] = `
<Filename
  iconDescription="Upload complete"
  status="edit"
  tabIndex="0"
>
  <ForwardRef(Close16)
    aria-label="Upload complete"
    className="bx--file-close"
    tabIndex="0"
  >
    <Icon
      aria-label="Upload complete"
      className="bx--file-close"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      tabIndex="0"
      viewBox="0 0 32 32"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        aria-label="Upload complete"
        className="bx--file-close"
        focusable="true"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        style={
          Object {
            "willChange": "transform",
          }
        }
        tabIndex="0"
        viewBox="0 0 32 32"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="24 9.4 22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4"
        />
        <title>
          Upload complete
        </title>
      </svg>
    </Icon>
  </ForwardRef(Close16)>
</Filename>
`;

exports[`Filename renders as expected renders upload status icon as expected 3`] = `
<Filename
  iconDescription="Upload complete"
  status="complete"
  tabIndex="0"
>
  <ForwardRef(CheckmarkFilled16)
    aria-label="Upload complete"
    className="bx--file-complete"
    tabIndex="0"
  >
    <Icon
      aria-label="Upload complete"
      className="bx--file-complete"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      tabIndex="0"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <svg
        aria-label="Upload complete"
        className="bx--file-complete"
        focusable="true"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        style={
          Object {
            "willChange": "transform",
          }
        }
        tabIndex="0"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,1C4.1,1,1,4.1,1,8c0,3.9,3.1,7,7,7s7-3.1,7-7C15,4.1,11.9,1,8,1z M7,11L4.3,8.3l0.9-0.8L7,9.3l4-3.9l0.9,0.8L7,11z"
        />
        <path
          d="M7,11L4.3,8.3l0.9-0.8L7,9.3l4-3.9l0.9,0.8L7,11z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          Upload complete
        </title>
      </svg>
    </Icon>
  </ForwardRef(CheckmarkFilled16)>
</Filename>
`;
